feat: remove install desktop app notice

--- a/static/discord.css
+++ b/static/discord.css
@@ -13,6 +13,9 @@
 header {
   margin-top: 2.5px !important;
 }
+.notice-3bPHh- {
+  display: none;
+}
 .wrapper-6URcxg,
 .notice-3bPHh-,
 .themed-ANHk51,
